@@ -23,6 +23,12 @@
     padding-right: 1em;
     cursor: pointer;
 }
+#characterRefreshSelector div.toon img {
+    height: 14px;
+    border: solid 1px #333333;
+    border-radius: 3px;
+    margin-right: .5em;
+}
 #characterRefreshSelector div.toon:hover {
     background: none repeat scroll 0 0 rgba(70, 70, 70, 0.6);
 }
